--- a/Lab_01/Lab_01.html
+++ b/Lab_01/Lab_01.html
@@ -8,14 +8,14 @@
 </head>
 <body>
           <div className="portfolio-container">
-        {/* Header */}
+        <!-- {/* Header */} -->
         <header className="header">
           <h1>Pedro Genaro - Desenvolvedor Full Stack</h1>
         </header>
 
-        {/* Main Content */}
+        <!-- {/* Main Content */} -->
         <main className="main-content">
-          {/* Sobre Mim */}
+          <!-- {/* Sobre Mim */} -->
           <section className="section">
             <h2>Sobre Mim</h2>
             <p>
@@ -36,7 +36,7 @@
             </p>
           </section>
 
-          {/* Habilidades */}
+          <!-- {/* Habilidades */} -->
           <section className="section">
             <h2>Habilidades Técnicas</h2>
             <ul className="skills-list">
@@ -49,20 +49,21 @@
             </ul>
           </section>
 
-          {/* Projetos */}
+          <!-- {/* Projetos */} -->
           <section className="section">
             <h2>Projetos em Destaque</h2>
             <div className="projects-grid">
             
                   <div className="project-info">
-                    <h3>Lab0{i + 2}</h3>
-                    <p>Projeto de laboratório 0{i + 2}</p>
+                    <h3>Lab02</h3>
+                    <p>Projeto laboratório 02</p>
+                <a href = "pedroGenaro2007/Lab_FullStack/Lab_02" target ="_blank" rel="noopener noreferrer" className="link-card">Lab02</a>
                   </div>
                 </div>
             </div>
           </section>
 
-          {/* Links */}
+          <!-- {/* Links */} -->
           <section className="section">
             <h2>Links Importantes</h2>
             <div className="links-grid">
@@ -99,7 +100,7 @@
             </div>
           </section> -->
 
-          {/* Iframes */}
+          <!-- {/* Iframes */} -->
           <section className="section">
             <h2>Localização e Conteúdo</h2>
             
@@ -149,7 +150,7 @@
             </div>
           </section>
 
-          {/* Contato */}
+          <!-- {/* Contato */} -->
           <section className="section">
             <h2>Entre em Contato</h2>
             <div className="contact-grid">
@@ -169,7 +170,7 @@
           </section>
         </main>
 
-        {/* Footer */}
+        <!-- {/* Footer */} -->
         <footer className="footer">
           <p>© 2025 Pedro Genaro - Desenvolvedor Full Stack. Todos os direitos reservados.</p>
           <!-- <p className="footer-secondary"></p> (para escrita no final da pagina)-->
