--- a/Lab_01/Lab_01.html
+++ b/Lab_01/Lab_01.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <a href ="Lab_01.css" class = "stylesheet"></a>
+   <link rel="stylesheet" href="Lab_01.css">
 </head>
 <body>
           <div className="portfolio-container">
         <!-- {/* Header */} -->
         <header className="header">
-          <h1>Pedro Genaro - Desenvolvedor Full Stack</h1>
+          <h1>Pedro Genaro </h1>
+          <h2>Desenvolvedor Full Stack</h2>
         </header>
 
         <!-- {/* Main Content */} -->
@@ -23,12 +24,14 @@
               Com experiência em HTML, CSS, JS, Node.js e mais, busco sempre 
               entregar projetos de alta qualidade que fazem a diferença.
             </p>
+
             <p>
               Minha jornada na tecnologia começou recentemente e tenho me dedicado a aprender 
               novas ferramentas e metodologias para melhorar minhas habilidades. Acredito que a 
               programação é uma forma de arte e cada linha de código é uma oportunidade de criar algo 
               extraordinário.
             </p>
+
             <p>
               Além de programar, gosto de aprender através de artigos técnicos e 
               participar de comunidades de desenvolvimento. Estou sempre aberto a novos desafios e 
